.metadata/.plugins/org.eclipse.cdt.ui/1275_bsp_xspi_intr_example_1.build.log
15:52:47 **** Build of configuration Debug for project 1275_bsp_xspi_intr_example_1 ****
make all 
'Building file: ../src/xspi_intr_example.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xspi_intr_example.o" -I../../1275_bsp/microblaze_1/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v11.0 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/xspi_intr_example.d" -MT"src/xspi_intr_example.o" -o "src/xspi_intr_example.o" "../src/xspi_intr_example.c"
../src/xspi_intr_example.c: In function 'main':
../src/xspi_intr_example.c:179:27: error: 'IntcInstance' undeclared (first use in this function); did you mean 'SpiInstance'?
  Status = SpiIntrExample(&IntcInstance,
                           ^~~~~~~~~~~~
                           SpiInstance
../src/xspi_intr_example.c:179:27: note: each undeclared identifier is reported only once for each function it appears in
At top level:
../src/xspi_intr_example.c:135:13: warning: 'Intc' defined but not used [-Wunused-variable]
 static INTC Intc;  /* The instance of the Interrupt Controller */
             ^~~~
make: *** [src/subdir.mk:23: src/xspi_intr_example.o] Error 1

15:52:47 Build Finished (took 160ms)

